Start to move away from Map<String, String|Object>
This is done first for the Handshakes, by introducing a nice
HandshakeInfo that also holds a DockerHost.  This commit also adds a
DockerUserException, the User part is to say, that it is something
nice that can be shown to users (i.e. in the frontend).